--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,17 +11,28 @@
         <ul
           class="list-inline list-group list-group-horizontal text-center footer-links d-flex justify-content-center flex-row">
 
-          {{ range .Site.Data.lightbi.social.social_icons }}
+        {{ range .Site.Data.lightbi.social.social_icons }}
           {{- if isset $.Site.Params.Author .id }}
-          <li>
-            <a href="{{ printf .url (index $.Site.Params.Author .id) }}" title="{{ .title }}" target="_blank">
-              <span class="mx-2">
-                <i class="{{ .icon }}"></i>
-              </span>
-            </a>
-          </li>
+            <li>
+              {{ if eq .id "email" }}
+                <script>
+                  const user = "{{ $.Site.Params.Author.email_user }}";
+                  const domain = "{{ $.Site.Params.Author.email_domain }}";
+                  document.write(
+                    '<a href="mailto:' + user + '@' + domain + '" title="{{ .title }}" target="_blank">' +
+                      '<span class="mx-2"><i class="{{ .icon }}"></i></span>' +
+                    '</a>'
+                  );
+                </script>
+              {{ else }}
+                <a href="{{ printf .url (index $.Site.Params.Author .id) }}" title="{{ .title }}" target="_blank">
+                  <span class="mx-2"><i class="{{ .icon }}"></i></span>
+                </a>
+              {{ end }}
+            </li>
           {{- end -}}
-          {{ end }}
+        {{ end }}
+
           {{ if .Site.Params.rss }}
           <li>
             <a href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" title="RSS">
