--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,13 @@
 {{ define "main" }}
 
 <div class="intro-header no-img">
+    <h2 class="font-bold">
+        No APIs? No problem. I make the web your database.
+    </h2>
+    <p>I run a professional web scraping business built on experience, speed, and technical versatility.<br>
+    Whether it’s e-commerce, social media, or real estate: if it’s online, I can get the data you need.
+    Clean and fast...</p>
+    <p>Interested? Just reach out using the <a href="#site-footer">contact links in the footer.</a></p>
 </div>
 
 <div class="container" role="main">
