--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
     <p>I run a professional web scraping business built on experience, speed, and technical versatility.<br>
     Whether it’s e-commerce, social media, or real estate: if it’s online, I can get the data you need.
     Clean and fast...</p>
-    <p>Interested? Just reach out using the <a href="#site-footer">contact links in the footer.</a></p>
+    <p>Interested? Just reach out using the <a href="#site-footer">contact links are in the footer.</a></p>
 </div>
 
 <div class="container" role="main">
