--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -45,18 +45,20 @@
             {{ if hugo.IsMultilingual }}
               {{ with .AllTranslations }}
               <li class="nav-item dropdown">
-                <button class="p-1 bg-light rounded dropdown-toggle border " data-bs-toggle="dropdown" aria-expanded="false"> 
-                  {{ $.Language.Lang }} 
+                <button class="d-flex align-items-center gap-1 p-1 border-0 bg-white" data-bs-toggle="dropdown" aria-expanded="false">
+                  {{ $.Language.Lang }}
+                  <i class="bi bi-chevron-down small chevron-icon"></i>
                 </button>
-              <ul class="dropdown-menu ">
-                {{ range . }}
-                {{ if eq .Language.Lang $.Language.Lang }}
-                <li><a class="dropdown-item active" aria-current="page" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a></li>
-                {{ else }}
-                <li><a class="dropdown-item" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a></li>
-                {{ end }}
-                {{ end }}
-              </ul>
+              
+                <ul class="dropdown-menu">
+                  {{ range . }}
+                    {{ if eq .Language.Lang $.Language.Lang }}
+                      <li><a class="dropdown-item active" aria-current="page" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a></li>
+                    {{ else }}
+                      <li><a class="dropdown-item" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a></li>
+                    {{ end }}
+                  {{ end }}
+                </ul>
               </li>
               {{ end }}
             {{ end }}
