--- a/layouts/partials/post_preview_list.html
+++ b/layouts/partials/post_preview_list.html
@@ -13,7 +13,7 @@
                 {{ partial "post_meta.html" . }}
             </p> -->
                 {{ print }}
-                <div class="post-entry">
+                <div class="post-entry text-secondary">
                     {{ if .Description }}
                     {{ .Description }}
 
