--- a/layouts/shortcodes/bs_img_card.html
+++ b/layouts/shortcodes/bs_img_card.html
@@ -6,8 +6,8 @@
         <div class="card h-100 bg-faded-light">
             <div class="card-body">
                 {{ if .Get "title" }}
-                <a href="{{ .Get " link" }}" class="m-0 fs-6 color-cgreen">
-                    <h4 class="card-title">{{ .Get "title" }}</h4>
+                <a href="{{ .Get " link" }}" class=" fs-6 color-cgreen">
+                    <h4 class="card-title m-0">{{ .Get "title" }}</h4>
                 </a>
                 {{ end }}
                 {{ if .Get "descr" }}
