--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,13 +6,33 @@
   @import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css);
 {{ end }}
 
+@import "fonts.scss";
+
+// Variables
+:root {
+  --color-primary: #2e7d32;         // Forest Green
+  --color-primary-dark: #1b5e20;
+  --color-accent: #d4a373;          // Warm sand/tan
+
+  --color-text: #222222;
+  --color-heading: #111111;
+  --color-subtle: #666666;
+
+  --color-bg: #ffffff;
+  --color-bg-muted: #fefcf7;
+  --color-border: #dedede;
+  --color-underline: rgba(0, 0, 0, 0.2);
+}
+
+
 /* --- General --- */
 
 body {
   font-size: 1.2rem;
-  color: #344854;
+  font-family: 'Inter', sans-serif;
+  color: var(--color-text);
   position: relative;
-  background: #FFFFFF;
+  background: var(--color-bg);
   display: flex;
   flex-flow: column;
   min-height: 100vh;
@@ -40,16 +60,26 @@ p+p {
 }
 
 p a {
-  color: #008AFF;
+    color: var(--color-primary);
+    text-decoration: underline;
+    text-underline-offset: .40rem;
+    text-decoration-color: rgba(0, 0, 0, .25);
+}
+
+p a:hover {
+    color: var(--color-primary);
+    text-decoration: underline;
+    text-underline-offset: .40rem;
+    text-decoration-color: #000;
 }
 
 
 li a {
-  color: #008AFF;
+  color: var(--color-primary);
 }
 
 a {
-  color: #4B4F56;
+  color: var(--color-text);
   text-decoration: none;
 }
 
@@ -168,8 +198,26 @@ img {
 }
 
 
+/* Animate the line from the left */
+.link-underline::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 2px;
+  bottom: -4px;
+  left: 0;
+  background-color: var(--color-primary);
+  transform: scaleX(0);
+  transform-origin: top left;
+  transition: transform 0.3s ease;
+}
 
-/* --- Navbar --- */
+.link-underline:hover::before {
+  transform: scaleX(1);
+}
+
+/* --- Navbar /Menu--- */
 
 @media (max-width: 992px) {
   .fixed-top {
@@ -348,6 +396,18 @@ img {
   }
 }
 
+.dropdown-toggle::after { 
+  display: none !important;
+}
+
+.chevron-icon {
+  transition: transform 0.3s ease;
+}
+
+/* When dropdown is open, rotate the chevron */
+.dropdown.show .chevron-icon {
+  transform: rotate(180deg);
+}
 
 
 /* --- Search --- */
@@ -474,6 +534,8 @@ footer .theme-by {
   }
 }
 
+
+
 /* --- Post preview --- */
 
 .blog-post h1, 
@@ -487,13 +549,13 @@ footer .theme-by {
 }
 
 .post-preview {
-  padding: 20px 0;
+  // padding: 20px 0;
   border-bottom: 1px solid #eee;
 }
 
 @media only screen and (min-width: 768px) {
   .post-preview {
-    padding: 35px 0;
+    // padding: 35px 0;
   }
 }
 
@@ -524,7 +586,7 @@ footer .theme-by {
 .post-title:focus,
 .post-title:hover {
   text-decoration: none;
-  color: #2ec458
+  color: var(--color-primary);
     /* #FF0000;  */
 }
 
@@ -539,7 +601,6 @@ footer .theme-by {
 .page-meta {
   color: #808080;
   font-size: 13px;
-  font-style: italic;
   margin: 0 0 10px;
 }
 
@@ -556,8 +617,7 @@ footer .theme-by {
 
 .post-meta {
   color: #808080;
-  font-size: 13px;
-  font-style: italic;
+  font-size: 11px;
   margin: 0 0 10px;
 }
 
@@ -565,11 +625,11 @@ footer .theme-by {
   display: inline-block;
   width: 100%;
 }
-
 .post-entry {
   width: 100%;
   margin-top: 10px;
-  /* color: #4B4F56;  */
+  color: hsl(222deg, 22%, 5%);
+  font-size: 1.1rem;
 }
 
 .post-image {
@@ -595,6 +655,11 @@ footer .theme-by {
   float: right;
 }
 
+.blog-post img {
+    box-shadow: 0 10px 10px rgba(0, 0, 0, .08);
+    border-radius: .375rem !important;
+}
+
 @media only screen and (min-width: 768px) {
   /* .post-preview .post-title {
      font-size: 26px;
@@ -608,19 +673,24 @@ footer .theme-by {
   font-size: 15px;
 }
 
-/* .blog-tags:before {
-   content: "Tags: ";
-} */
+// .blog-tags:before {
+//    content: "Tags: ";
+// }
+
+.blog-tags a:before {
+  content: "#";
+}
 
 .blog-tags a {
   color: #8C8D8E;
   text-decoration: none;
   padding: 0px 5px;
+  background-color: #F8F9FA;
+  border: .1px solid #d3cfcf;
+  border-radius: 0.375rem;
 }
 
-.blog-tags a:before {
-  content: "#";
-}
+
 
 .blog-tags a:hover {
   border-radius: 2px;
@@ -715,7 +785,7 @@ footer .theme-by {
 
 .intro-header .post-heading h1 {
   margin-top: 0;
-  font-size: 35px;
+  // font-size: 35px;
 }
 
 .intro-header .page-heading .page-subheading,
@@ -1016,6 +1086,7 @@ ul.share li:hover .fab {
 
 .nav-link {
   background-color: rgba(255, 255, 255, .98);
+  font-size: 1.1rem;
 }
 
 .bg-faded-light {
@@ -1052,6 +1123,8 @@ ul.share li:hover .fab {
   max-width: 40%;
 }
 
+
+// Card styles
 .single-post-card {
   background-color: white;
   text-align: left;
@@ -1108,6 +1181,19 @@ ul.share li:hover .fab {
   background-position: center;
   background-repeat: no-repeat;
   padding: 10px 0;
+}
+
+.image-wrapper {
+  width: 100%;
+  height: 220px;
+  overflow: hidden;
+}
+
+.fixed-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
 
@@ -1194,6 +1280,48 @@ ul.share li:hover .fab {
   flex-direction: row;
 }
 
+// Notes design
+
+.note-card {
+    border-radius: 1rem;
+    background: #fff;
+    border: 1px solid #e1e4eb;
+    transition: box-shadow 0.3s ease;
+}
+
+.note-card:hover {
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+}
+
+.note-card h3,
+.note-card h5 {
+    margin-bottom: 0.5rem;
+}
+
+.note-card .card-footer {
+    background-color: #fff  !important;
+    border-top: 1px solid #dee2e6;
+}
+
+// about me
+
+.about-section h1, 
+.about-section h2, 
+.about-section h3, 
+.about-section h4, 
+.about-section h5, 
+.about-section h6,
+.about-section p {
+  margin-top: 1.5em;
+  margin-bottom: .5em;
+}
+
+.about-section img {
+  box-shadow: 0 10px 10px rgba(0, 0, 0, .08);
+  border-radius: .375rem !important;
+}
+
+
 /* --- Dark mode --- */
 
 :root[data-theme="dark"] {
@@ -1212,7 +1340,6 @@ ul.share li:hover .fab {
   -webkit-filter: hue-rotate(180deg) contrast(100%) invert(100%);
 }
 :root[data-theme="dark"] #dark-mode-toggle::before {
-  /* Convert to .bi-sun */
   content: "\f5a2";
 }
 
