--- a/layouts/about/about.html
+++ b/layouts/about/about.html
@@ -1,23 +1,13 @@
 {{ define "main" }}
-
-<div class="about-section">
-  <div class="container">
-    <div class="row flex-lg-row-reverse align-items-center">
-      <div class="col-md-8 col-lg-4">
-        {{ $image := resources.Get "/img/author-about.jpg" }}
-        <img src="{{ $image.RelPermalink }}" alt="Image of Bino Kochumol Varghese"
-          class="dd-block mx-lg-auto img-fluid img-rounded img-80">
-      </div>
-      <div class="col-md-8 col-lg-8">
-        <div class="col-12">
-          {{ with .Content }}
-          {{.}}
-          {{ end }}
+    <div class="container  ">
+      <div class="about-section">
+        <div class="row justify-content-center">
+          <div class="col-sm-12 col-md-10 col-lg-8">
+            {{ with .Content }}
+              {{ . }}
+            {{ end }}
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
-
-
 {{ end }}
