--- a/layouts/partials/post_preview_notes.html
+++ b/layouts/partials/post_preview_notes.html
@@ -1,51 +1,38 @@
-<div class="col-sm-12 col-md-12 col-lg-10 col-xl-10">
-    <!-- <div class="card mb-3 "> -->
-        <div class="card border mb-3 "> 
-        <div class="card-body">
-            <div class="row">
+<div class="col-sm-12 col-md-12 col-lg-10 col-xl-10 mx-auto">
+    <div class="card mb-4 shadow-sm note-card border rounded-4">
+        <div class="card-body p-4">
+            <div class="row align-items-center mb-2">
                 <div class="col-md-10">
-                    <h3 class="fw-medium post-title">{{ .Title }}</h3>
-                </div>
-                <div class="col-md-2 d-flex justify-content-end">
-                    <a href="{{ .Permalink }}">
-                        <button type="button" class="btn btn-outline-dark">
-                            Link
-                        </button>
-                    </a>
+                    {{ if .Params.Title }}
+                    <h3 class="fw-medium   text-dark-emphasis mb-2">{{ .Title }}</h3>
+                    {{ end }}
+                    {{ if .Params.subtitle }}
+                    <h5 class="text-muted fst-italic">{{ .Params.subtitle }}</h5>
+                    {{ end }}
                 </div>
             </div>
 
-            {{ if .Params.subtitle }}
-            <h3 class="post-subtitle">
-                {{ .Params.subtitle }}
-            </h3>
-            {{ end }}
-
-            <p class="post-meta">
+            <p class="post-meta text-muted small">
                 {{ partial "post_meta_notes.html" . }}
             </p>
-            {{ print }}
-            <div class="post-entry">
 
+            <div class="blog-post">
                 {{ if .Content }}
                 {{ .Content }}
                 {{ end }}
             </div>
         </div>
-        <!-- <hr class="m-1"/> -->
-        <!-- <div class="col"> -->
-        {{ if .Params.tags }}
-        <div class="card-footer text-muted">
-            <div class="blog-tags">
+
+        <div class="card-footer bg-light border-top text-secondary d-flex justify-content-between align-items-center px-4 py-3 rounded-bottom-4">
+            <div class="blog-tags flex-grow-1 small">
+                <i class="bi bi-tags-fill me-1 text-success"></i>
                 {{ range .Params.tags }}
-                <a href="{{ $.Site.LanguagePrefix | absURL }}tags/{{ . | urlize }}/">{{ . }}</a>
+                <a href="{{ $.Site.LanguagePrefix | absURL }}tags/{{ . | urlize }}/" class="text-decoration-none me-2">{{ . }}</a>
                 {{ end }}
             </div>
+            <div class="small">
+                <a href="{{ .Permalink }}" class="text-decoration-none text-secondary-emphasis small">Link</a>
+            </div>
         </div>
-        {{ end }}
-
-
-
-
     </div>
 </div>
