--- a/layouts/partials/homeLayout/profile.html
+++ b/layouts/partials/homeLayout/profile.html
@@ -17,21 +17,23 @@
         </a>
       </div>
 
+      <div class="col-sm-12 col-md-4 col-lg-4">
       {{ $imgPath := .Site.Params.profilePhoto }}
       {{ with resources.Get $imgPath }}
         <img 
           loading="lazy" 
           src="{{ .RelPermalink }}" 
           alt="Image of Author"
-          class="img-fluid avatar"
+          class="img-fluid avatar pt-2"
           style="max-width: 250px;"
         >
       {{ end }}
+      </div>
     </div>
   </div>
   </section>
 
-  <section class="color-F5F5F7 background-img">
+  <section class="section-primary-bg">
     <div class="container">
     <div class="row mt-5">
       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-4">
@@ -56,7 +58,7 @@
       <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 mb-4">
         <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 mb-4">
-          <a href="{{ relLangURL " /posts/" }}" class="link-underline position-relative d-inline-block">
+          <a href="{{ relLangURL "/posts/" }}" class="link-underline position-relative d-inline-block">
             Browse all <i class="bi bi-arrow-right"></i>
           </a>
         </div>
