Filter the preview summaries with plainify to prevent in-post images from being displayed in the preview cards.

--- a/layouts/partials/post_preview_bottom_card.html
+++ b/layouts/partials/post_preview_bottom_card.html
@@ -17,9 +17,8 @@
                 <div class="post-entry text-secondary">
                     {{ if .Description }}
                     {{ .Description }}
-
                     {{ else }}
-                    {{ .Summary }}
+                    {{ .Summary | plainify }}
                     {{ end }}
                 </div>
 
