--- a/layouts/partials/post_preview_middle_img_cards.html
+++ b/layouts/partials/post_preview_middle_img_cards.html
@@ -29,7 +29,7 @@
                     {{ if .Description }}
                     {{ .Description }}
                     {{ else }}
-                    {{ .Summary }}
+                    {{ .Summary | plainify }}
                     {{ end }}
                 </div>
 
